Cofigure kubeconfig for kubeCmdClient